WIP: YT go api Note: mandatory check (NEED_CHECK) was skipped

--- a/yt/go/yson/TODO.org
+++ b/yt/go/yson/TODO.org
@@ -42,8 +42,8 @@
 * TODO
 ** implicit int-uint conversion
 ** SyntaxError type
-** omitempty
+** DONE omitempty
 ** zero initialization of fields
 ** handling nil values
 ** cleanup error handling
-** TextMarshaler and BinaryMarshaler
+** DONE TextMarshaler and BinaryMarshaler
